Fix bug that created scrollbars

--- a/_anki_base.css
+++ b/_anki_base.css
@@ -77,7 +77,7 @@ body{
 
 .overlay-hide {
     display: block!important;
-    width:100vw;
+    width:calc( 100vw - var(--medium-distance) );
     height:100vh;
     position: absolute;
     background-color:white;
